web/.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        imagePullPolicy: Always
        image: cr.yandex/crphumdkkpdrgg386glu/web:latest
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
        - containerPort: 80
