web/.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-certificate
spec:
  tls:
    - secretName: zakupai.letsencrypt.key.tls
      hosts:
        - xn----7sbbznd9a5a.xn--p1ai
  rules:
  - host: xn----7sbbznd9a5a.xn--p1ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
